[gd_scene format=3 uid="uid://b1xdag54tvknp"]

[ext_resource type="Script" uid="uid://dc4ptx84cxhp5" path="res://_test/char_converter/char_converter.gd" id="1_65pcv"]
[ext_resource type="Script" uid="uid://laohskhxo8ti" path="res://_test/char_converter/charDisplay.gd" id="2_c2k2x"]
[ext_resource type="Script" uid="uid://cfaa5qckmjf8g" path="res://_test/char_converter/control.gd" id="3_qptib"]

[node name="CharConverter" type="Control" unique_id=1416316126]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65pcv")

[node name="FileDialog" type="FileDialog" parent="." unique_id=289154189]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.ini;Char.ini file")
use_native_dialog = true

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1744213753]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=2198589]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2

[node name="EmoteList" type="ItemList" parent="HBoxContainer/VBoxContainer" unique_id=1508437362]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
max_columns = 0
fixed_column_width = 70
icon_mode = 0
fixed_icon_size = Vector2i(60, 60)

[node name="ConvertButton" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1494157145]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Convert char.ini to GodotKFO"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer" unique_id=1706737653]
layout_mode = 2
size_flags_horizontal = 3
ratio = 1.3333

[node name="Preview Node" type="Node2D" parent="HBoxContainer/AspectRatioContainer" unique_id=790857443]
position = Vector2(14.635, 0)
script = ExtResource("2_c2k2x")

[node name="PreviewTextureRect" type="TextureRect" parent="HBoxContainer/AspectRatioContainer/Preview Node" unique_id=245820122]
unique_name_in_owner = true
mouse_filter = 2
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="." unique_id=336551850]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_right = -24.0
offset_bottom = 178.0
grow_horizontal = 0
script = ExtResource("3_qptib")

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=121121376]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.5
offset_right = 6.5
grow_horizontal = 2
grow_vertical = 2

[node name="emotes visible" type="Button" parent="Control/VBoxContainer" unique_id=119301641]
layout_mode = 2
size_flags_vertical = 3
text = "Toggle emotes"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=714431077]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer" unique_id=446794838]
layout_mode = 2
text = "Height normal: "

[node name="height normal" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer" unique_id=1605733342]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=1212712690]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2" unique_id=1731077145]
layout_mode = 2
text = "Offset: X:"

[node name="offset X" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer2" unique_id=2101869488]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer2" unique_id=581758890]
layout_mode = 2
text = "Y:"

[node name="offset Y" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer2" unique_id=117692499]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.1

[connection signal="item_rect_changed" from="HBoxContainer/AspectRatioContainer" to="HBoxContainer/AspectRatioContainer/Preview Node" method="_on_aspect_ratio_container_item_rect_changed"]
[connection signal="pressed" from="Control/VBoxContainer/emotes visible" to="Control" method="_on_emotes_visible_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/height normal" to="Control" method="_on_height_normal_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/offset X" to="Control" method="_on_offset_x_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/offset Y" to="Control" method="_on_offset_y_value_changed"]
